[gd_scene load_steps=5 format=3 uid="uid://dveyons2potho"]

[ext_resource type="PackedScene" uid="uid://7n15qb2gre3p" path="res://juegoGatoConBotas/scenes/GatoConBotas/Piso.tscn" id="1_2x1ou"]
[ext_resource type="Script" path="res://juegoGatoConBotas/scenes/GatoConBotas/Escenario.gd" id="1_6taxy"]
[ext_resource type="PackedScene" uid="uid://duf5iiiqj3y84" path="res://juegoGatoConBotas/scenes/GatoConBotas/GatoConBotas.tscn" id="2_5xvhm"]
[ext_resource type="PackedScene" uid="uid://bebi1pg05orxg" path="res://juegoGatoConBotas/scenes/GatoConBotas/Enemigo.tscn" id="3_hdd2k"]

[node name="Escenario" type="Node2D"]
script = ExtResource("1_6taxy")

[node name="GatoConBotas" parent="." instance=ExtResource("2_5xvhm")]

[node name="Piso" parent="." instance=ExtResource("1_2x1ou")]
position = Vector2(643, 689)

[node name="Enemigo" parent="." instance=ExtResource("3_hdd2k")]

[connection signal="perder_vida" from="GatoConBotas" to="." method="PerderVidaChar"]
[connection signal="perder_vida" from="Enemigo" to="." method="PerderVidaEnemy"]
